--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "element-ui": "^2.4.5",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.5",
+    "vue-localstorage": "^0.6.2",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
